[gd_scene load_steps=6 format=2]

[ext_resource path="res://Pillar.gd" type="Script" id=1]
[ext_resource path="res://art/pillar/top_green.png" type="Texture" id=2]
[ext_resource path="res://art/pillar/below_green.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 21.5554, 159.1 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 20.2066, 155.654 )

[node name="Pillars" type="Node2D"]

script = ExtResource( 1 )
speed = 1

[node name="top_pillar0" type="StaticBody2D" parent="." index="0"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="top_pillar0" index="0"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_pillar0" index="1"]

visible = false
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="top_pillar1" type="StaticBody2D" parent="." index="1"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="top_pillar1" index="0"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_pillar1" index="1"]

visible = false
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="top_pillar2" type="StaticBody2D" parent="." index="2"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="top_pillar2" index="0"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_pillar2" index="1"]

visible = false
position = Vector2( -1, 0 )
shape = SubResource( 1 )

[node name="below_pillar0" type="StaticBody2D" parent="." index="3"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="below_pillar0" index="0"]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="below_pillar0" index="1"]

shape = SubResource( 2 )

[node name="below_pillar1" type="StaticBody2D" parent="." index="4"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="below_pillar1" index="0"]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="below_pillar1" index="1"]

shape = SubResource( 2 )

[node name="below_pillar2" type="StaticBody2D" parent="." index="5"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="below_pillar2" index="0"]

texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="below_pillar2" index="1"]

shape = SubResource( 2 )


